# trackNet

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  main.cpp  spdsim_v3.py  tracknet_torchscript_model.pt  tracknet_torchscript_model_cuda.pt
